    build errors on Panther for those two tools.
  o Include rebuilt OpenSSL libraries in the Windows packages that are
    built with the static (/MT) version of the Microsoft Visual C++
    Runtime. Otherwise, we would require users to install the MSVC
    Redistributable, which doesn't work for portable installations such as
    the Tor Browser Bundle.


0.2.1   03-Aug-2009
  o Add a "Find Bridges Now" button that will attempt to automatically
    download a set of bridge addresses and add them to the list of bridges
    in the Network settings page.
  o Add support for building with Google's Breakpad crash reporting
    library (currently disabled by default).
  o Show or hide the "Who has used my bridge recently?" link along with
    the other bridge-related widgets when the user toggles the relay mode
    in the Network settings page. (Ticket #480)
  o Tolerate bridge addresses that do not specify a port number, since Tor
    now defaults to using port 443 in such cases.
  o Add support for viewing the map as a full screen widget when built
    with KDE Marble support.
  o Compute the salted hash of the control password ourself when starting
    Tor, rather than launching Tor once to hash the password, parsing the
    output, and then again to actually start Tor.
  o Add a signal handler that allows Vidalia to clean up and exit normally
    when it catches a SIGINT or SIGTERM signal. (Ticket #481)
  o If the user chooses to ignore further warnings for a particular port,
    remove it from the WarnPlaintextPorts and RejectPlaintextPorts
    settings immediately. Also remember their preferences and reapply them
    later, even if Tor is unable to writes to its torrc.(Ticket #493)
  o Don't display additional plaintext port warning message boxes until
    the first visible message box is dismissed. (Ticket #493)
  o Renamed the 'make win32-installer' CMake target to 'make dist-win32'
    for consistency with our 'make dist-osx' target.